# altro

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: AltroCMakeFunctions.cmake
examples/arduino/libraries/: .gitignore
examples/arduino/teensy/: teensy.ino
examples/cmake/basic_cmake_project/: CMakeLists.txt  main.cpp
examples/cmake/fetchcontent_example/: CMakeLists.txt  README.md
install/: AltroArduinoInstall.cmake  CMakeLists.txt  altroConfig.cmake.in
resources/: 00-teensy.rules
resources/arduino_package_template/: library.properties
resources/arduino_package_template/src/: altro.cpp  altro.h
resources/arduino_package_template/src/ArduinoEigen/: ArduinoEigen.h  ArduinoEigenCommon.h
src/: CMakeLists.txt
src/altro/: CMakeLists.txt  altro.cpp  altro.hpp  altro_solver.cpp  altro_solver.hpp  solver_options.hpp  typedefs.hpp
src/altro/mpc/: tracking.cpp  tracking.hpp
src/altro/solver/: CMakeLists.txt  cones.cpp  cones.hpp  exceptions.cpp  exceptions.hpp  internal_types.hpp  knotpoint_data.cpp  knotpoint_data.hpp  shifted_vector.cpp  shifted_vector.hpp  solver.cpp  solver.hpp  solver_options.cpp  solver_options.hpp  solver_stats.cpp  solver_stats.hpp  typedefs.hpp
src/altro/solver/test/: CMakeLists.txt  alilqr_test.cpp  cones_test.cpp  knotpoint_data_test.cpp  shifted_vector_test.cpp  solver_impl_test.cpp
src/altro/utils/: formatting.hpp  quaternion_utils.cpp  quaternion_utils.hpp
src/altrocpp_interface/: CMakeLists.txt  altrocpp_interface.cpp  altrocpp_interface.hpp
src/altrocpp_interface/test/: CMakeLists.txt  altrocpp_interface_test.cpp
src/linesearch/: CMakeLists.txt  cubicspline.c  cubicspline.h  linesearch.c  linesearch.cpp  linesearch.h  linesearch.hpp
src/linesearch/test/: CMakeLists.txt  linesearch_tests.cpp
src/solver/: CMakeLists.txt  internal_types..hpp  knotpoint_data.hpp  shifted_vector.hpp  solver.cpp  solver.hpp
src/solver/test/: CMakeLists.txt  shifted_vector_test.cpp
src/tvlqr/: CMakeLists.txt  tvlqr.cpp  tvlqr.h
src/tvlqr/test/: CMakeLists.txt  tvlqr_test.cpp
test/: CMakeLists.txt  altro_api.cpp  bicycle_test.cpp  double_integrator_test.cpp  pendulum_test.cpp  planning_with_attitude_test.cpp  quadruped_quat_test.cpp  quadruped_quat_test.json  quadruped_quaternion_test.cpp  quadruped_quaternion_test.json  read_json.m  scotty.json  scotty_mpc.json  simple_quat_mpc.json  simple_quaternion_track_test.cpp  simple_quaternion_track_test.json  test_utils.cpp  test_utils.hpp
