add_library(altro_test_utils
  test_utils.hpp
  test_utils.cpp
)
target_link_libraries(altro_test_utils
  PUBLIC
  gtest_main
  altro::altro
  fmt::fmt
  Eigen3::Eigen
  altro_impl

  PRIVATE
  nlohmann_json::nlohmann_json
)
add_library(altro::test_utils ALIAS altro_test_utils)
target_include_directories(altro_test_utils
  INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
)
target_compile_definitions(altro_test_utils
  PUBLIC
  ALTRO_TEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
)

add_executable(altro_api_test
  altro_api_test.cpp
)
target_link_libraries(altro_api_test
  PRIVATE
  gtest_main
  altro::altro
  fmt::fmt
)
gtest_discover_tests(altro_api_test)

add_executable(double_integrator_test
  double_integrator_test.cpp
)
target_link_libraries(double_integrator_test
  PRIVATE
  gtest_main
  altro::altro
  altro::impl
  fmt::fmt
  Eigen3::Eigen
)

add_executable(pendulum_test
  pendulum_test.cpp
)
target_link_libraries(pendulum_test
  PRIVATE
  gtest_main
  altro::altro
  fmt::fmt
  Eigen3::Eigen
  altro::test_utils
)

add_executable(bicycle_test
  bicycle_test.cpp
)
target_link_libraries(bicycle_test
  PRIVATE
  gtest_main
  altro::altro
  altro::test_utils
  fmt::fmt
  Eigen3::Eigen
  nlohmann_json::nlohmann_json
)
gtest_discover_tests(bicycle_test)

add_executable(simple_quaternion_track_test
simple_quaternion_track_test.cpp
)
target_link_libraries(simple_quaternion_track_test
  PRIVATE
  gtest_main
  altro::altro
  altro::test_utils
  fmt::fmt
  Eigen3::Eigen
  nlohmann_json::nlohmann_json
)
gtest_discover_tests(simple_quaternion_track_test)

add_executable(quadruped_quaternion_test
        quadruped_quaternion_test.cpp
        )
target_link_libraries(quadruped_quaternion_test
        PRIVATE
        gtest_main
        altro::altro
        altro::test_utils
        fmt::fmt
        Eigen3::Eigen
        nlohmann_json::nlohmann_json
        )
gtest_discover_tests(quadruped_quaternion_test)